--- a/www/index.html
+++ b/www/index.html
@@ -16,8 +16,11 @@
         <h1>App Notificações</h1>
         <div class="right">
           <button class="icon ion-search"></button>
-          <button class="icon ion-plus-round"></button>
-          <button class="icon ion-android-more-vertical" onclick="openPopover('meuPopover')"></button>
+          <button class="icon ion-plus-round" onclick="alert('Clicou no Add!', 'Adicionar')"></button>
+          <button 
+            class="icon ion-android-more-vertical" 
+            onclick="openPopover('meuPopover')"
+          ></button>
         </div>
       </div>
 
@@ -39,25 +42,43 @@
         <div class="list">
           <div class="item">
             <div class="right align-top">
-              <button class="icon ion-android-more-vertical" onclick="openPopover('meuPopover')"></button>
+              <button 
+                class="icon ion-android-more-vertical" 
+                onclick="openPopover('meuPopover')"
+              ></button>
             </div>
             <h1 class="text-strong">Darlan Silva</h1>
             <p class="opacity-50">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe, accusantium delectus autem omnis eum corrupti. Quisquam at, tempore a officia nesciunt, cumque unde hic labore laborum nisi ratione quia fuga?</p>
           </div>
           <div class="item">
             <div class="right align-top">
-              <button class="icon ion-android-more-vertical" onclick="openPopover('meuPopover')"></button>
+              <button 
+                class="icon ion-android-more-vertical" 
+                onclick="openPopover('meuPopover')"
+              ></button>
             </div>
             <h1 class="text-strong">Darlan Silva</h1>
             <p class="opacity-50">Quo odit beatae eius iusto, illum ducimus commodi saepe enim quod laudantium non neque totam illo, molestiae possimus fugit sint dolores error fuga voluptates. Rerum, id? Id nulla quidem totam.</p>
           </div>
           <div class="item">
             <div class="right align-top">
-              <button class="icon ion-android-more-vertical" onclick="openPopover('meuPopover')"></button>
+              <button 
+                class="icon ion-android-more-vertical" 
+                onclick="openPopover('meuPopover')"
+              ></button>
             </div>
             <h1 class="text-strong">Darlan Silva</h1>
-            <p class="opacity-50">Repellendus atque totam natus quo minus repudiandae ea non amet, quae, sequi beatae aut facilis consequatur quibusdam aliquid? Enim, eius adipisci? Inventore in voluptatem dignissimos delectus aliquid laboriosam et recusandae?</p>
+            <p class="opacity-50">
+              Repellendus atque totam natus quo minus repudiandae ea non amet, quae, sequi beatae aut facilis consequatur quibusdam aliquid? Enim, eius adipisci? Inventore in voluptatem dignissimos delectus aliquid laboriosam et recusandae?
+            </p>
           </div>
+        </div>
+        <div class="row padding">
+          <button 
+            id="btnSalvar"
+            class="teal full radius" 
+            onclick="loadingElement('btnSalvar', 'Aguarde, salvando...')"
+          >Salvar dados</button>
         </div>
       </div>
 
